[project]
name = "Oculus"
dynamic = ["version"]
description = "OSINT Simplified"
authors = [
    {name = "Paul Pfeister", email = "code@pfeister.dev"},
]
dependencies = [
    "sherlock-project>=0.15.0",
    "platformdirs>=4.2.2",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "PGPy>=0.6.0",
    "colorama>=0.4.6",
    "phonenumbers>=8.13.40",
    "tldextract>=5.1.2",
    "BeautifulSoup4>=4.12.3",
    "aiohttp>=3.9.5",
]
requires-python = ">=3.10"
readme = "docs/README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
oculus = "oculus.console:interactive"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "oculus/data/__scm_version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "tox>=4.16.0",
    "ruff>=0.5.1",
]
