[project]
name = "sylva"
dynamic = ["version"]
description = "Identity discovery simplified"
authors = [
    {name = "Paul Pfeister", email = "code@pfeister.dev"},
]
dependencies = [
    "sherlock-project>=0.15.0",
    "platformdirs>=4.2.2",
    "requests>=2.28.0",
    "pandas>=2.2.2",
    "colorama>=0.4.6",
    "phonenumbers>=8.13.40",
    "tldextract>=3.5.0",                                  # TODO: Request fc39-41 update to 5.1.2
    "BeautifulSoup4>=4.12.3",
    "aiohttp>=3.9.5",
    "bottle>=0.12.25",                                    # FlareSolverr depends on this
    "certifi>=2023.5.7",                                  # FlareSolverr depends on this
    "charset-normalizer>=3.3.2",                          # FlareSolverr depends on this
    "click>=8.1.7",                                       # FlareSolverr depends on this
    "cssselect>=1.1.0",                                   # FlareSolverr depends on this
    "et-xmlfile>=1.1.0",                                  # FlareSolverr depends on this
    "filelock>=3.15.4",                                   # FlareSolverr depends on this
    "func-timeout>=4.3.5",                                # FlareSolverr depends on this
    "idna>=3.7",                                          # FlareSolverr depends on this
    "lxml>=4.9.3",                                        # FlareSolverr depends on this
    "openpyxl>=3.1.2",                                    # FlareSolverr depends on this
    "pefile==2023.2.7; platform_system == \"Windows\"",   # FlareSolverr depends on this
    "prometheus-client>=0.17.1",                          # FlareSolverr depends on this
    "psutil>=5.9.5",                                      # FlareSolverr depends on this
    "requests-file>=1.5.1",                               # FlareSolverr depends on this
    "urllib3>=1.26.19",                                   # FlareSolverr depends on this
    "waitress>=2.1.2",                                    # FlareSolverr depends on this
    "websocket-client>=1.3.3",                            # FlareSolverr depends on this
    "websockets>=11.0.3",                                 # FlareSolverr depends on this
    "xvfbwrapper>=0.2.9; platform_system != \"Windows\"", # FlareSolverr depends on this
    "cryptography>=3.3.2",                                # PGPy depends on this
    "pyasn1>=0.5.1",                                      # PGPy depends on this
    "spacy>=3.7.5",
]
requires-python = ">=3.10"
readme = ".github/README.md"
license = {text = "AGPL-3.0-or-later"}

[project.urls]
homepage = "https://sylva.pfeister.dev"
repository = "https://github.com/ppfeister/sylva"
bug-tracker = "https://github.com/ppfeister/sylva/issues"

[project.scripts]
sylva = "sylva.console:interactive"

[project.optional-dependencies]
mkdocs = [
    "mkdocs-material>=9.5.30",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocstrings[python]>=0.25.2",
]
lint = [
    "ruff>=0.6.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "sylva/data/__scm_version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "tox>=4.16.0",
    "tox-pdm>=0.7.2",
    "coverage>=7.6.1",
    "jsonschema>=4.23.0",
]

[tool.ruff]
exclude = [
    "src/pgpy/",
    "src/flaresolverr/",
]

[tool.pytest.ini_options]
norecursedirs = [
    "src/pgpy",
    "src/flaresolverr",
]
addopts = "--strict-markers"

[tool.coverage.run]
omit = [
    "**/intelxapi.py",
]
